# pawpad

./: .env.example  .gitignore  README.md  SPEC.md  install.sh  pyproject.toml  requirements.txt
.voltai/: id.txt
bot/: audit.py  budget.py  main.py  output.py  sessions.py  slash.py
bot/mcp/: discord_send.py
claude/: CLAUDE.md  settings.json
docs/: architecture.md  creds.md  runbook.md
infra/terraform/: main.tf  outputs.tf  startup.sh.tftpl  variables.tf
installer/: _helpers.py  prime.py  tui.py
installer/steps/: anthropic.py  deploy.py  discord.py  finalize.py  gcp_auth.py  gcp_project.py  github.py  obsidian.py  tailscale.py  vm_specs.py  welcome.py
obsidian/livesync/: README.md  docker-compose.yml
obsidian/vault-template/: CLAUDE.md
obsidian/vault-template/wiki/: hot.md  index.md  log.md  overview.md
obsidian/vault-template/wiki/concepts/: _index.md
obsidian/vault-template/wiki/domains/: _index.md
obsidian/vault-template/wiki/entities/: _index.md
quartz/: README.md
scripts/: archive-project.sh  archive-thread.sh  clone-project.sh  install-vm.sh  new-project.sh  new-thread.sh  retrofit-storage.sh  snapshot.sh  teardown.sh
systemd/: jojo-bot.service  livesync.service  quartz.service
