[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pawpad-bot"
version = "0.0.0"
description = "On-VM Discord bot orchestrating Claude Agent SDK sessions"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4",
    "claude-agent-sdk>=0.1",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[tool.setuptools]
packages = ["bot", "bot.mcp"]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
